--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -176,6 +176,13 @@ RUN bash -c "source activate python2 && git clone https://github.com/LindleyLent
                 cp /var/tmp/Makefile Makefile && make \
                  && make libchord.so && cp src/libchord* /usr/lib && cd ../ && make temponest && make temponest install"
 RUN cp /opt/pulsar/lib/python2.7/site-packages/* /opt/conda/envs/python2/lib/python2.7/site-packages/
+COPY Makefile /opt/pulsar/src/TempoNest/MultiNest/
+RUN bash -c "source activate python2 && cd /opt/pulsar/src/TempoNest && \
+              make clean && ./autogen.sh && CPPFLAGS=\"-I/opt/pulsar/include\" \
+                LDFLAGS=\"-L/opt/pulsar/lib\" ./configure --prefix=/opt/pulsar && cd PolyChord && \
+                cp /var/tmp/Makefile Makefile && make \
+                 && make libchord.so && cp src/libchord* /usr/lib && cd ../ && \
+                  cd MultiNest && make && make libnest3.so && cp libnest* /usr/lib/ && cd ../ && make temponest && make temponest install"
 RUN chown -R jovyan /home/jovyan
 RUN apt clean
 RUN conda clean -a
